tests/src/frontend/typechecking/invalid/final_base_construct_1.sk
base class B final ()

fun main(): void {
  b = B;
  _ = b();
  print_raw("FAIL")
}
